--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,6 +16,10 @@
 	flex: 1 1 auto;
 }
 
+.ag-header-cell-text {
+	font-weight: bold;
+}
+
 .ag-theme-blue .ag-header {
 	background-color: #b9d8d7 !important;
 }
